--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,11 @@
     <title>Christian</title>
 </head>
 <body>
-    <h1>Mi primera pagina HTML</h1>
-    <h4>Mi primera pagina HTML</h4>
+    <header><h1>Web Page</h1><header>
+        <nav><ul>
+            <li>login</li>  
+            <li><a href="./pages/home.html">Home</a></li>
+            <li><a href="./pages/profile.html">Profile</a></li>
+        </ul></nav>
 </body>
 </html>
